src/components/Section/section.scss
@import '../../styles/variables';
@import '../../styles/mixins';

.section {
  --section-anim-delay: 0.1s;
  --section-anim-offset: 0.2s;
  --section-image-anim-delay: 1.2s;

  background-color: var(--background-color-light);
  border-radius: 0 0 36px 36px;
  padding: 88px 0 58px;
  position: relative;

  @include breakpoint('phone-max') {
    border-radius: 0 0 26px 26px;
  }

  &:after {
    content: '';
    position: absolute;
    top: -112px;
    left: 0;
    right: 0;
    background: url('../../images/bg/home-bg.svg') no-repeat center;
    background-size: cover;
    width: 100%;
    height: 1012px;
    max-width: 1049px;
    z-index: 1;

    @include anim-init-fade-scale-in();
    animation: fade-scale-in var(--anim-medium-duration) var(--section-anim-delay)
      var(--anim-easing-in) forwards;

    @include breakpoint('tablet-desktop') {
      height: 961px;
      max-width: 1002px;
    }

    @include breakpoint('tablet') {
      height: 710px;
      max-width: 740px;
    }

    @include breakpoint('phone-max') {
      height: 360px;
      max-width: 375px;
      top: -80px;
    }
  }

  @include breakpoint('phone-max') {
    padding: 70px 0 80px;
  }

  &__container {
    margin: 0 auto;
    max-width: 1440px;
    width: 100%;
    padding: 0 48px;

    @include breakpoint('phone-max') {
      padding: 0 24px;
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    max-width: 604px;
    width: 100%;
    margin: 0 auto 140px;
    position: relative;
    z-index: 2;

    @include breakpoint('phone-max') {
      max-width: 100%;
    }
  }

  &__pre-title,
  &__title,
  &__form {
    @include anim-init-reveal-in-from-bottom();
    animation: reveal-in-from-bottom var(--anim-long-duration)
      calc(var(--section-anim-delay) + var(--section-anim-offset)) var(--anim-easing-in-back)
      forwards;
  }

  &__pre-title {
    color: var(--text-color-grey);
    font-size: 28px;
    line-height: 39px;
    font-weight: 600;
    margin-bottom: 10px;
    text-transform: capitalize;

    @include breakpoint('phone-max') {
      font-size: 20px;
      line-height: 28px;
    }
  }

  &__title {
    color: var(--text-color-dark);
    font-size: 40px;
    line-height: 56px;
    font-weight: bold;
    margin-bottom: 34px;

    animation-delay: calc(var(--section-anim-delay) + var(--section-anim-offset) * 2);

    @include breakpoint('phone-max') {
      font-size: 28px;
      line-height: 39px;
    }

    & > span {
      color: var(--text-color-primary);
    }
  }

  &__image-list {
    display: flex;
    align-items: center;
    justify-self: center;
    max-width: 1234px;
    width: 100%;
    margin: 0 auto;
    position: relative;
    z-index: 2;

    &--is-main-anim-end {
      .section__image-item {
        &--left,
        &--right {
          visibility: visible;
          animation: slide-rotate-in calc(var(--anim-default-duration) * 2)
            var(--anim-easing-in-out) forwards;
        }
      }
    }

    @include breakpoint('phone-max') {
      max-width: 100%;
      height: 0;
      padding-bottom: 140%;
      overflow: hidden;
    }
  }

  &__image-item {
    position: relative;

    @include breakpoint('phone-max') {
      position: absolute;
      top: 0;
    }

    img,
    picture {
      max-width: 100%;
      width: 100%;
    }

    &--main,
    &--right,
    &--left {
      @include breakpoint('phone-max') {
        position: absolute;
      }
    }

    &--main {
      z-index: 3;

      @include anim-init-fade-scale-in();
      animation: fade-scale-in var(--anim-medium-duration) var(--section-image-anim-delay)
        var(--anim-easing-in-back) forwards;

      @include breakpoint('phone-max') {
        left: 18%;
        width: 64%;
        top: 0;
      }
    }

    &--right,
    &--left {
      visibility: hidden;
      @include anim-init-slide-rotate-in();

      @include breakpoint('phone-max') {
        width: 53%;
        margin-top: -17px;
        top: 8%;
      }
    }

    &--right {
      --anim-slide-x: -80%;
      --anim-rotate-y: -30deg;
      left: -103px;

      @include breakpoint('phone-max') {
        left: auto;
        right: -12%;
        // transform: translate(39%, -50%);
      }
    }

    &--left {
      --anim-slide-x: 80%;
      --anim-rotate-y: 30deg;
      right: -103px;

      @include breakpoint('phone-max') {
        right: auto;
        left: -12%;
        // transform: translate(-39%, -50%);
      }
    }
  }

  &__form {
    background-color: var(--background-color-primary);
    max-width: 420px;
    width: 100%;
    border-radius: 16px;
    display: flex;
    align-items: center;

    animation-delay: calc(var(--section-anim-delay) + var(--section-anim-offset) * 3);

    @include breakpoint('phone-max') {
      max-width: 100%;
    }

    &__input {
      background-color: var(--background-color-light);
      border: 2px solid var(--border-color-primary);
      border-radius: 16px;
      color: var(--text-color-dark);
      font-size: 17px;
      line-height: 22px;
      padding: 18px;
      max-width: 294px;
      width: 100%;

      @include breakpoint('phone-max') {
        max-width: 100%;
      }

      &::-webkit-input-placeholder {
        color: var(--text-color-light-gray);
      }

      &:focus {
        border-color: var(--border-color-primary) !important;
      }
    }

    &__button {
      background-color: var(--background-color-primary);
      border-radius: 0 16px 16px 0;
      border: 0;
      padding: 19px 34px 19px 18px;
      color: var(--background-color-light);
      font-size: 17px;
      line-height: 24px;
      font-weight: 600;

      @include breakpoint('phone-max') {
        padding: 19px 20px;
      }
    }
  }
}

